<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
<LinearLayout
    android:padding="16dp"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!"
        android:layout_marginBottom="16dp"
        />

    <Button
        android:id="@+id/button_toast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Premi per far comparire un Toast"
        android:layout_marginBottom="16dp"

 />
    <Button
        android:id="@+id/button_two_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GeoQuiz vero o falso"
         android:layout_marginBottom="16dp"

        />
    <Button
        android:id="@+id/button_android_viewmodel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capitolo_2"
        android:layout_marginBottom="16dp"

        />
    <Button
    android:id="@+id/button_capitolo_3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/capitolo_3"
    android:layout_marginBottom="16dp"

        />
    <Button
        android:id="@+id/button_capitolo_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Persistenza di novità"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/button_capitolo_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capitolo_5_debbugging"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/button_capitolo_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/capitolo_6_debbugging"
        android:layout_marginBottom="16dp"/>
</LinearLayout>
</ScrollView>